fixed problem with menu on mobile - deleted overflow hidden from header on mobile

--- a/elegant/src/css/_menu.scss
+++ b/elegant/src/css/_menu.scss
@@ -20,14 +20,14 @@
 	}
 
 	&__drop{
-		// display: none;
+		display: none;
 		position: absolute;
 		top: 80px;
 		// left: 0%;
 		right: -100%;
 		width: 100%;
-		height: 100%;
-		height: calc(100% - 80px);
+		// height: 100%;
+		// height: calc(100% - 80px);
 		padding: 20px;
 		background-color: rgba(0,0,0, 0.8);
 		transition: all 0.3s;
@@ -67,6 +67,7 @@
 	&.open{
 		background: #000;
 		.menu__drop{
+			display: block;
 			position: absolute;
 			display: block;
 			right: 0;
@@ -156,162 +157,155 @@
 	}
 }
 
-@include ipad{
-	.menu{
-	&__list{
-	}
-	&__item{
-		text-align: center;
-	}
-	&__link{
-		display: block;
-		width: 40%;
-		margin: 0 auto;
-		color: #fff;
-		text-decoration: none;
-		border-bottom: 2px solid gray;
-		&:hover{
-			background-color: rgba(255,255,255,0.5);
-		}
-	}
+// @include ipad{
+// 	.menu{
+// 	&__list{
+// 	}
+// 	&__item{
+// 		text-align: center;
+// 	}
+// 	&__link{
+// 		display: block;
+// 		width: 40%;
+// 		margin: 0 auto;
+// 		color: #fff;
+// 		text-decoration: none;
+// 		border-bottom: 2px solid gray;
+// 		&:hover{
+// 			background-color: rgba(255,255,255,0.5);
+// 		}
+// 	}
 
-	&__drop{
-		// display: none;
-		position: absolute;
-		top: 80px;
-		// left: 0%;
-		right: -100%;
-		width: 100%;
-		height: 100%;
-		height: calc(100% - 80px);
-		padding: 20px;
-		background-color: rgba(0,0,0, 0.8);
-		transition: all 0.3s;
-	}
-	&__dropdown{
-		background: $black;
-		&-text{
-			display: none;
-		}
-		a{
-			position: relative;
-			display: block;
-			width: 85px;
-			height: 100px;
-		}
-	}
+// 	&__drop{
+// 		display: block;
+// 		position: absolute;
+// 		top: 80px;
+// 		right: -100%;
+// 		width: 100%;
+// 		padding: 20px;
+// 		background-color: rgba(0,0,0, 0.8);
+// 		transition: all 0.3s;
+// 	}
+// 	&__dropdown{
+// 		background: $black;
+// 		&-text{
+// 			display: none;
+// 		}
+// 		a{
+// 			position: relative;
+// 			display: block;
+// 			width: 85px;
+// 			height: 100px;
+// 		}
+// 	}
 
-	&__img-wrapper{
-		position: absolute;
-		top: 40%;
-		left: 50%;
+// 	&__img-wrapper{
+// 		position: absolute;
+// 		top: 40%;
+// 		left: 50%;
+// 		margin-top: -20px;
+// 		margin-left: -20px;
+// 		display: block;
+// 		img{
+// 			width: 100%;
+// 		}
+// 	}
+// }
 
-		// margin: -20px 0 0 -20px;
-		margin-top: -20px;
-		margin-left: -20px;
-		display: block;
-		// width: 35px;
-		// height: 26px;
-		// margin: 0 auto;
-		img{
-			width: 100%;
-		}
-	}
-}
+// .menu__list{
+// 	&.open{
+// 		background: #000;
+// 		.menu__drop{
 
-.menu__list{
-	&.open{
-		background: #000;
-		.menu__drop{
+// 			display: block;
+// 			right: 0;
+// 			z-index: 5;
+// 		}
 
-			display: block;
-			right: 0;
-			z-index: 5;
-		}
+// 		.icon{
+// 			border: 1px solid #fff;
+// 			border-radius: 50%;
+// 			&__line{
 
-		.icon{
-			border: 1px solid #fff;
-			border-radius: 50%;
-			&__line{
+// 			  &:nth-child(1){
+// 					top: 15px;
+// 				  width: 0%;
+// 				  left: 50%;
+// 			  }
+// 			  &:nth-child(2){
+// 			  	-webkit-transform: rotate(45deg);
+// 				  -moz-transform: rotate(45deg);
+// 				  -o-transform: rotate(45deg);
+// 				  transform: rotate(45deg);
+// 			  }
+// 			  &:nth-child(3){
+// 			  	-webkit-transform: rotate(-45deg);
+// 				  -moz-transform: rotate(-45deg);
+// 				  -o-transform: rotate(-45deg);
+// 				  transform: rotate(-45deg);
+// 			  }
+// 			  &:nth-child(4){
+// 			  	top: 15px;
+// 				  width: 0%;
+// 				  left: 50%;
+// 			  }
+// 			}
+// 		}
+// 	}
+// }
 
-			  &:nth-child(1){
-					top: 15px;
-				  width: 0%;
-				  left: 50%;
-			  }
-			  &:nth-child(2){
-			  	-webkit-transform: rotate(45deg);
-				  -moz-transform: rotate(45deg);
-				  -o-transform: rotate(45deg);
-				  transform: rotate(45deg);
-			  }
-			  &:nth-child(3){
-			  	-webkit-transform: rotate(-45deg);
-				  -moz-transform: rotate(-45deg);
-				  -o-transform: rotate(-45deg);
-				  transform: rotate(-45deg);
-			  }
-			  &:nth-child(4){
-			  	top: 15px;
-				  width: 0%;
-				  left: 50%;
-			  }
-			}
-		}
-	}
-}
+// //icon
 
-//icon
+// .icon{
+// 	position: relative;
+// 	width: 42px;
+// 	height: 42px;
+// 	padding: 5px;
 
-.icon{
-	position: relative;
-	width: 42px;
-	height: 42px;
-	padding: 5px;
+// 	-webkit-transform: rotate(0deg);
+//   -moz-transform: rotate(0deg);
+//   -o-transform: rotate(0deg);
+//   transform: rotate(0deg);
+//   -webkit-transition: .5s ease-in-out;
+//   -moz-transition: .5s ease-in-out;
+//   -o-transition: .5s ease-in-out;
+//   transition: .5s ease-in-out;
+//   // cursor: pointer;
 
-	-webkit-transform: rotate(0deg);
-  -moz-transform: rotate(0deg);
-  -o-transform: rotate(0deg);
-  transform: rotate(0deg);
-  -webkit-transition: .5s ease-in-out;
-  -moz-transition: .5s ease-in-out;
-  -o-transition: .5s ease-in-out;
-  transition: .5s ease-in-out;
-  // cursor: pointer;
+//   transition: border-radius 0s ease-in-out;
+// 	&__line{
+// 		position: absolute;
+// 		display: block;
+// 		height: 5px;
+// 	  width: 100%;
+// 	  background: #fff;
+// 	  border-radius: 2px;
+// 	  opacity: 1;
+// 	  left: 0;
+// 	  -webkit-transform: rotate(0deg);
+// 	  -moz-transform: rotate(0deg);
+// 	  -o-transform: rotate(0deg);
+// 	  transform: rotate(0deg);
+// 	  -webkit-transition: .25s ease-in-out;
+// 	  -moz-transition: .25s ease-in-out;
+// 	  -o-transition: .25s ease-in-out;
+// 	  transition: .25s ease-in-out;
+// 	  &:nth-child(1){
+// 			top: 5px;
+// 	  }
+// 	  &:nth-child(2){
+// 	  	top: 17px;
+// 	  }
+// 	  &:nth-child(3){
+// 	  	top: 17px;
+// 	  }
+// 	  &:nth-child(4){
+// 	  	top: 29px;
+// 	  }
+// 	}
+// }
 
-  transition: border-radius 0s ease-in-out;
-	&__line{
-		position: absolute;
-		display: block;
-		height: 5px;
-	  width: 100%;
-	  background: #fff;
-	  border-radius: 2px;
-	  opacity: 1;
-	  left: 0;
-	  -webkit-transform: rotate(0deg);
-	  -moz-transform: rotate(0deg);
-	  -o-transform: rotate(0deg);
-	  transform: rotate(0deg);
-	  -webkit-transition: .25s ease-in-out;
-	  -moz-transition: .25s ease-in-out;
-	  -o-transition: .25s ease-in-out;
-	  transition: .25s ease-in-out;
-	  &:nth-child(1){
-			top: 5px;
-	  }
-	  &:nth-child(2){
-	  	top: 17px;
-	  }
-	  &:nth-child(3){
-	  	top: 17px;
-	  }
-	  &:nth-child(4){
-	  	top: 29px;
-	  }
-	}
-}
-}
+// }
 
 @include desktop{
 	.menu{
@@ -360,15 +354,12 @@
 			margin: 0;
 		}
 		&__drop{
+			display: block;
 			top: 85px;
 			height: 100%;
 			height: calc(100% - 70px);
 			width:40%;
-			// left:60%;
 			right: -40%;
-			// .menu__link{
-			// 	background-color: transparent;
-			// }
 		}
 	}
 
